--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -15,29 +15,35 @@
 
 
         <TextView
-            android:id="@+id/layout_item_from"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
+            android:id="@+id/layout_item_datecurency"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="2dp"
-            android:text="100k"
+            android:layout_toLeftOf="@+id/layout_item_fromcurrency"
+            android:layout_toStartOf="@+id/layout_item_fromcurrency"
+            android:text="@+id/layout_item_datecurency"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/layout_item_fromcurrency"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignLeft="@+id/layout_item_from"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/layout_item_from"
+            android:text="$"
             android:textAlignment="center"
             android:textColor="@android:color/darker_gray"
             android:textSize="22dp"
             android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/layout_item_fromcurrency"
-            android:layout_width="30dp"
+            android:id="@+id/layout_item_from"
+            android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_toEndOf="@+id/layout_item_from"
-            android:layout_toRightOf="@+id/layout_item_from"
-            android:text="$"
+            android:layout_centerHorizontal="true"
+            android:text="100k"
             android:textAlignment="center"
             android:textColor="@android:color/darker_gray"
             android:textSize="22dp"
@@ -47,12 +53,10 @@
             android:id="@+id/layout_item_tovalue"
             android:layout_width="100dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="2dp"
-            android:layout_toEndOf="@+id/layout_item_fromcurrency"
-            android:layout_toRightOf="@+id/layout_item_fromcurrency"
+            android:layout_alignBaseline="@+id/layout_item_datecurency"
+            android:layout_alignBottom="@+id/layout_item_datecurency"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:text="100k"
             android:textAlignment="center"
             android:textColor="@android:color/darker_gray"
@@ -64,24 +68,13 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_toEndOf="@+id/layout_item_tovalue"
-            android:layout_toRightOf="@+id/layout_item_tovalue"
+            android:layout_toLeftOf="@+id/layout_item_tovalue"
+            android:layout_toStartOf="@+id/layout_item_tovalue"
             android:text="$"
             android:textAlignment="center"
             android:textColor="@android:color/darker_gray"
             android:textSize="22dp"
             android:textStyle="italic" />
-
-        <TextView
-            android:id="@+id/layout_item_datecurency"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/layout_item_from"
-            android:text="@+id/layout_item_datecurency"
-            android:textSize="20sp" />
 
     </RelativeLayout>
 </RelativeLayout>
