--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -40,11 +40,12 @@
                 android:id="@+id/spinner2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="61dp"
-                android:layout_marginStart="61dp"
-                android:layout_toEndOf="@+id/textView4"
-                android:layout_toRightOf="@+id/textView4"
+                android:layout_alignBaseline="@+id/textView4"
+                android:layout_alignBottom="@+id/textView4"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="63dp"
+                android:layout_marginRight="63dp"
                 android:width="50dp"
                 android:contextClickable="true"
                 android:gravity="right|start" />
@@ -83,8 +84,9 @@
                 android:id="@+id/spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignBaseline="@+id/amountValue"
-                android:layout_alignBottom="@+id/amountValue"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="43dp"
+                android:layout_marginStart="43dp"
                 android:layout_toEndOf="@+id/amountValue"
                 android:layout_toRightOf="@+id/amountValue"
                 android:width="50dp"
